# prelegal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json
backend/: pyproject.toml
backend/app/: auth.py  chat.py  db.py  doc_config.py  documents.py  main.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py
frontend/: CLAUDE.md  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppHeader.tsx  AuthScreen.tsx  ClientProviders.tsx  DocumentCatalog.tsx  DocumentChat.tsx  DocumentPreview.tsx  MyDocuments.tsx  NDAChat.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: doc-types.ts  nda-types.ts
frontend/tests/e2e/: auth.spec.ts  download.spec.ts  form-fields.spec.ts  helpers.ts  print.spec.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
