[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.1",
    "litellm>=1.90.0",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
